syntax = "proto3";

package article.v1;

import "media/v1/media.proto";

option go_package = "sabitou/proto/article/v1;articleV1";

message Article {
  string id = 1;
  string name = 2;
  string description = 3;
  string bar_code_value = 4;
  repeated string images = 5;
  string created_at = 6;
  string updated_at = 7;
}

message GetArticleRequest {
  string id = 1;
}

message GetArticleResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  string bar_code_value = 4;
  repeated media.v1.Media images = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CreateArticleRequest {
  Article article = 1;
}

message UpdateArticleRequest {
  Article article = 1;
}

message DeleteArticleRequest {
  string id = 1;
}

message DeleteArticleResponse {
  bool success = 1;
}

message CreateArticleResponse {
  string id = 1;
}

message UpdateArticleResponse {
  Article article = 1;
}

service ArticleService {
  rpc GetArticle(GetArticleRequest) returns (GetArticleResponse);
  rpc CreateArticle(CreateArticleRequest) returns (CreateArticleResponse);
  rpc UpdateArticle(UpdateArticleRequest) returns (UpdateArticleResponse);
  rpc DeleteArticle(DeleteArticleRequest) returns (DeleteArticleResponse);
}
